# pixel-sort

./: Cargo.toml  README.md
src/: args.rs  colors.rs  main.rs
