[package]
name = "pixel-sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
image = { version = "0.24.6", features = ["avif"] }
indicatif = { version = "0.17.5", features = ["rayon"] }
rayon = "1.7.0"
strum = { version = "0.24.1", features = ["derive"] }
